#2 proper error reporting

--- a/gdx-backend-bytecoder-example/prod/index.html
+++ b/gdx-backend-bytecoder-example/prod/index.html
@@ -20,9 +20,9 @@
 <script src="https://cdn.jsdelivr.net/npm/gl-matrix@3/gl-matrix.js"></script>
 <script>
 
-
     var errorred = function (result) {
-        console.log("BOE errored :(");
+        console.log("Error occurred");
+        console.log(result)
     }
 
     var instantiated = function (result) {
