--- a/gdx-backend-bytecoder-example/prod/index.html
+++ b/gdx-backend-bytecoder-example/prod/index.html
@@ -50,10 +50,28 @@
     };
 
     function startApp(){
+        registerFakeImports();
+
         WebAssembly.instantiateStreaming(fetch('main.wasm'), bytecoder.imports)
             .catch(errorred)
             .then(instantiated);
     }
+
+    /**
+     * Registers fake imports, to prevent crash on start.
+     * @Coen: probably can be solved by adding those methods in TBufferUtils
+     */
+    function registerFakeImports() {
+        bytecoder.imports["bufferutils"] = {
+            "newDisposableByteBufferINT": function () {
+                console.log("FAKE function newDisposableByteBufferINT called");
+            },
+            "freeMemoryByteBuffer": function () {
+                console.log("FAKE function freeMemoryByteBuffer called");
+            }
+        };
+    }
+
 
 </script>
 <div id="app"/>
