#2 replace BufferUtils from libgdx with custom one
Make plugin use shaded jar, which already no longer has duplicates

--- a/gdx-backend-bytecoder-example/prod/index.html
+++ b/gdx-backend-bytecoder-example/prod/index.html
@@ -59,7 +59,7 @@
 
     /**
      * Registers fake imports, to prevent crash on start.
-     * @Coen: probably can be solved by adding those methods in TBufferUtils
+     * @Coen: probably not needed now anymore, as we filter out the cards in the Shader plugin
      */
     function registerFakeImports() {
         bytecoder.imports["bufferutils"] = {
