Some more steps toward working assetloader

--- a/gdx-backend-bytecoder-example/prod/index.html
+++ b/gdx-backend-bytecoder-example/prod/index.html
@@ -154,6 +154,9 @@
     canvas1.mat4 = function() {
         return glMatrix.mat4;
     }
+    canvas1.origin = function() {
+        return window.origin
+    }
 </script>
 </body>
 
